# mesh-optimizer

./: .gitignore  LICENSE  README.md  mesh_config.example.yaml  pyproject.toml  setup.cfg  setup.py
docs/: API.md  ARCHITECTURE.md  SETUP.md
installers/linux/: install.sh  uninstall.sh
installers/macos/: install.sh  uninstall.sh
installers/windows/: install.ps1  uninstall.ps1
mesh_optimizer/: __init__.py  cli.py  config.py  models.py  upgrade.py
mesh_optimizer/agent/: __init__.py  gpu_optimizer.py  hardware_scanner.py  health_reporter.py  job_executor.py  node_agent.py  probe_runner.py
mesh_optimizer/api/: __init__.py  agent_api.py
mesh_optimizer/net/: __init__.py  client.py
mesh_optimizer/security/: __init__.py  auth.py  tls.py
tests/: test_config.py  test_hardware_scanner.py  test_health_reporter.py
